syntax = "proto3";

import "google/protobuf/wrappers.proto";

option java_multiple_files = true;
option java_package = "slot";

service SlotService {
  rpc GetAvailableStudents (google.protobuf.StringValue) returns (StudentAndCounts);
}

message StudentAndCount {
  string studentId = 1;
  int64 count = 2;
}

message StudentAndCounts {
  repeated StudentAndCount studentAndCount = 1;
}
